[workspace]
members = [
    "incrementalmerkletree",
    "incrementalmerkletree-testing",
    "shardtree",
]
exclude = [
    "bridgetree",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.64"
repository = "https://github.com/zcash/incrementalmerkletree"
homepage = "https://github.com/zcash/incrementalmerkletree"
license = "MIT OR Apache-2.0"
categories = ["algorithms", "data-structures"]

[workspace.dependencies]
# Intra-workspace dependencies
incrementalmerkletree = { version = "0.8.1", path = "incrementalmerkletree" }
incrementalmerkletree-testing = { version = "0.3", path = "incrementalmerkletree-testing" }

assert_matches = "1.5"
bitflags = "2"
either = { version = "1.8", default-features = false }
proptest = "1"
rand = "0.9"
rand_chacha = "0.3"
rand_core = "0.6"
tempfile = ">=3, <3.7.0" # 3.7 has MSRV 1.63
tracing = "0.1"
