[package]
name = "bridgetree"
version = "0.4.0"
authors = [
    "Kris Nuttycombe <kris@nutty.land>",
    "Sean Bowe <ewillbefull@gmail.com>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A space-efficient Merkle tree designed for linear appends with witnessing of marked leaves, checkpointing & state restoration."
homepage = "https://github.com/zcash/incrementalmerkletree"
repository = "https://github.com/zcash/incrementalmerkletree"
categories = ["algorithms", "data-structures"]
rust-version = "1.60"

[dependencies]
incrementalmerkletree = { version = "0.5", path = "../incrementalmerkletree" }
proptest = { version = "1.0.0", optional = true }

[dev-dependencies]
incrementalmerkletree = { version = "0.5", path = "../incrementalmerkletree", features = ["test-dependencies"] }
proptest = "1.0.0"

[features]
test-dependencies = ["proptest"]
