[package]
name = "bridgetree"
description = "A space-efficient Merkle tree designed for linear appends with witnessing of marked leaves, checkpointing & state restoration."
version = "0.5.0"
authors = [
    "Kris Nuttycombe <kris@nutty.land>",
    "Sean Bowe <ewillbefull@gmail.com>",
]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
incrementalmerkletree.workspace = true
proptest = { workspace = true, optional = true }

[dev-dependencies]
incrementalmerkletree = { workspace = true, features = ["test-dependencies"] }
incrementalmerkletree-testing.workspace = true
proptest.workspace = true

[features]
test-dependencies = ["proptest"]
