[package]
name = "incrementalmerkletree-testing"
description = "Common types, interfaces, and utilities for testing Merkle tree data structures"
version = "0.2.0-backcompat.0.8"
authors = [
    "Kris Nuttycombe <kris@nutty.land>",
    "Sean Bowe <ewillbefull@gmail.com>",
]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
incrementalmerkletree = { version = "0.8", features = ["test-dependencies"] }

proptest.workspace = true
