[package]
name = "incrementalmerkletree"
version = "0.3.0"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Kris Nuttycombe <kris@nutty.land>",
]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Common types, interfaces, and utilities for Merkle tree data structures"
homepage = "https://github.com/zcash/incrementalmerkletree"
repository = "https://github.com/zcash/incrementalmerkletree"
categories = ["algorithms", "data-structures"]

[dependencies]
either = "1.8"
serde = { version = "1", features = ["derive"] }
proptest = { version = "1.0.0", optional = true }

[dev-dependencies]
proptest = "1.0.0"

[features]
test-dependencies = ["proptest"]
