[package]
name = "incrementalmerkletree"
description = "Common types, interfaces, and utilities for Merkle tree data structures"
version = "0.4.0"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Kris Nuttycombe <kris@nutty.land>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/zcash/incrementalmerkletree"
repository = "https://github.com/zcash/incrementalmerkletree"
categories = ["algorithms", "data-structures"]
rust-version = "1.60"

[dependencies]
either = "1.8"
proptest = { version = "1.0.0", optional = true }

[dev-dependencies]
proptest = "1.0.0"

[features]
# The legacy-api feature guards types and functions that were previously 
# part of the `zcash_primitives` crate. Those types were removed in the
# `zcash_primitives` 0.12 release and are now maintained here.
legacy-api = []
# The test-depenencies feature guards types and functions that are 
# useful for testing incremental Merkle trees and Merkle tree frontiers.
test-dependencies = ["proptest"]
