[package]
name = "shardtree"
version = "0.0.0"
authors = [
    "Kris Nuttycombe <kris@nutty.land>",
]
edition = "2021"
rust-version = "1.60"
license = "MIT OR Apache-2.0"
description = "A space-efficient Merkle tree with witnessing of marked leaves, checkpointing & state restoration."
homepage = "https://github.com/zcash/incrementalmerkletree"
repository = "https://github.com/zcash/incrementalmerkletree"
categories = ["algorithms", "data-structures"]

[dependencies]
assert_matches = { version = "1.5", optional = true }
bitflags = "1.3"
either = "1.8"
incrementalmerkletree = { version = "0.4", path = "../incrementalmerkletree" }
proptest = { version = "1.0.0", optional = true }
tracing = "0.1"

[dev-dependencies]
assert_matches = "1.5"
criterion = "0.3"
incrementalmerkletree = { version = "0.4", path = "../incrementalmerkletree", features = ["test-dependencies"] }
proptest = "1.0.0"

[features]
# The legacy-api feature guards types and functions that are useful for
# migrating data previously managed using `incrementalmerkletree/legacy-api` 
# types into the `ShardTree` data structure.
legacy-api = ["incrementalmerkletree/legacy-api"]
# The test-depenencies feature can be enabled to expose types and functions
# that are useful for testing `shardtree` functionality.
test-dependencies = ["proptest", "assert_matches"]

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.9", features = ["criterion", "flamegraph"] } # MSRV 1.56
dashmap = ">=5, <5.5.0" # 5.5 has MSRV > 1.60
inferno = ">=0.11, <0.11.5" # MSRV 1.59
tempfile = ">=3, <3.7.0" # 3.7 has MSRV 1.63
